kubernetes/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  type: ClusterIP
  selector:
    app: backend
