kubernetes/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  type: ClusterIP
  selector:
    app: frontend
